protocolmodel/mcrl2/testing/errors/error_3003.mcf
% E3003 - No mutually supported OOB direction
[true* . ERROR_MSG(E3003)] false